fix some alignment issues with sticky nav

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -138,7 +138,6 @@ section-facilities .carousel-three {
 	list-style: none;
 	float: right;
 	margin-top: 30px;
-	word-spacing: 3px;
   margin-bottom: 4.5rem;
   margin-left: 20px;
 }
@@ -192,7 +191,7 @@ section-facilities .carousel-three {
     color: #222;
 }
 
-.sticky .main-nav { margin-top: 18px; }
+.sticky .main-nav { margin-top: 25px; }
 
 .sticky .main-nav li a:link,
 .sticky .main-nav li a:visited {
